--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
 }
 
 .MuiDataGrid-virtualScroller {
+  background-color: rgba(127, 255, 212, 0.644);
   border: .2px solid #33333331;
   margin: 0 2rem;
   border-radius: 4px;
